# cad-converter-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/cad_converter_service/: config.py
src/cad_converter_service/api/: main.py
src/cad_converter_service/converter/: core.py
src/cad_converter_service/worker/: tasks.py
